kubernetes/apps/apt-cacher-ng/overlays/prod/ingress-route.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: apt-cacher-ng-ingress
  namespace: tools
  annotations:
    external-dns.kubernetes.io/target: infra-int
spec:
  entryPoints:
    - websecure
    - websecure-ext
  routes:
    - match: Host(`apt.sobrinho.pt`)
      kind: Rule
      services:
        - name: apt-cacher-ng
          port: main
  tls:
    secretName: apt-cacher-ng-cert
